# Patterns

./: .gitignore  README.md
project/: CMakeLists.txt  Commands.cpp  Commands.h  Food.cpp  Food.h  MathConstants.h  MyPet.cpp  MyPet.h  Print.cpp  Print.h  Publish.cpp  Publish.h  Reader.cpp  Reader.h  StringConstants.h  Toy.cpp  Toy.h  main.cpp  project  tamagochi
project/Food/: Apple.cpp  Apple.h  Chips.cpp  Chips.h  Food.h  Hamburger.cpp  Hamburger.h  Pancake.cpp  Pancake.h  Poke.cpp  Poke.h  Salad.cpp  Salad.h
project/Toy/: Ball.cpp  Ball.h  ComputerGame.cpp  ComputerGame.h  Puzzle.cpp  Puzzle.h  Toy.h
