cmake_minimum_required(VERSION 3.17)
project(project)

set(CMAKE_CXX_STANDARD 14)

add_executable(project main.cpp Food/Food.h MyPet.cpp MyPet.h Commands.cpp Commands.h Toy/Toy.h Print.cpp Print.h Reader.cpp Reader.h Food/Apple.cpp Food/Apple.h Food/Salad.cpp Food/Salad.h Food/Poke.cpp Food/Poke.h Food/Pancake.cpp Food/Pancake.h Food/Chips.cpp Food/Chips.h Food/Hamburger.cpp Food/Hamburger.h MathConstants.h Toy/ComputerGame.cpp Toy/ComputerGame.h Toy/Puzzle.cpp Toy/Puzzle.h Toy/Ball.cpp Toy/Ball.h StringConstants.h Publish.cpp Publish.h)